Corrected the horizontal alignment of buttons text

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,9 @@ body {
   outline: 0;
   position: absolute;
   width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn.start,
